syntax = "proto3";

package wasm_msg;

message Request {
  bytes data = 1;
}

message Response {
  oneof result {
    bytes data = 1;
    string error = 2;
  }
}
